Correct width of the map to be the biggest possible without overflowing

--- a/assets/css/structure.css
+++ b/assets/css/structure.css
@@ -30,7 +30,7 @@ a#logo img{
 }
 
  section{
-    min-width: 100vw;
+    min-width: 100%;
     min-height: auto;  
 
 }
